fix: add xs spacing for TextField input

--- a/draft-packages/form/KaizenDraft/Form/TextField/TextField.module.scss
+++ b/draft-packages/form/KaizenDraft/Form/TextField/TextField.module.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.textFieldInput {
+  margin-top: $spacing-xs;
+}
+
 $input-disabled-opacity: 0.3;
 
 ///////////////////////////////////////////////////
